eks/ingress/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-api-grpc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: awesome-api.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-api-service
                port:
                  name: grpc
  tls:
    - hosts:
        - awesome-api.net
      secretName: bank-api-cert
