eks/ingress/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  defaultBackend:
    service:
      name: bank-api-service
      port:
        name: http
  ingressClassName: nginx
  rules:
  - host: "awesome-api.net" # This is the domain name I registered with Route53, maybe I have to change to "go.awesome-api.net" in A record
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: bank-api-service
              port:
                name: http
  tls:
  - hosts:
    - awesome-api.net
    secretName: bank-api-cert
